# Maths_Legora_app

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
context/: ARCHITECTURE.md  CORPUS_POLICY.md  INTERFACES.md  LLM_RULES.md  PROMPT_CONVENTION.md
later/: 14-teacher-oversight.md
prompts/: 00-scaffold-monorepo.md  01-db-and-pgvector.md  02-contract-types.md  03-verification-service.md  04-diagnosis-marking-service.md  05-verification-eval-gate.md  06-corpus-ingestion.md  07-retrieval-service.md  08-tutor-orchestrator.md  09-tutor-system-prompt.md  10-safety-guardrails.md  11-pii-and-gdpr.md  12-eval-harness.md  13-regression-unverified-claims.md  README.md
services/maths/: .gitignore  README.md  pyproject.toml  requirements.txt
services/maths/app/: main.py  models.py
services/maths/app/diagnosis/: engine.py  service.py
services/maths/app/verification/: normalize.py  service.py  sympy_verifier.py
services/maths/evals/: datasets.py  gate.py
services/maths/tests/: conftest.py  fixtures.py  test_api.py  test_contracts.py  test_eval_gate.py  test_mark_working.py  test_normalize.py  test_verify_answer.py  test_verify_step.py
