[project]
name = "imaia-maths"
version = "0.0.0"
description = "IMAIA maths service — SymPy verification + diagnosis (scaffold, prompt 00)."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "sympy>=1.13.0,<1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
